--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,76 @@
-body {
-    background-color: skyblue;
+@import 'bootstrap/dist/css/bootstrap.css';
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
+
+.container {
+    width: 100%;
+    height: 100vh;
+    background-color: lightcyan;
+    overflow: hidden;
+}
+
+.menu-icon {
+    width: 70px;
+    position: absolute;
+    top: 5%;
+    right: 20%;
+    cursor: pointer;
+}
+
+.menu-box {
+    width: 80%;
+    background-color: #242449;
+    position: absolute;
+    top: 17%;
+    left: 10%;
+    padding: 50px 100px;
+    transition: top 1s;
+}
+
+
+.right-links {
+    position: absolute;
+    right: 30px;
+    display: inline-block;
+}
+
+.right-links a {
+    text-decoration: none;
+    color: #fff;
+    background: #f92537;
+    padding: 15px 40px;
+    border-radius: 30px;
+}
+
+.menu-links a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    width: fit-content;
+    margin: 30px 0;
+    font-size: 26px;
+}
+
+.menu-links a::after {
+    content: '';
+    width: 40px;
+    height: 5px;
+    background: #f92537;
+    display: none;
+    margin-left:10px;
+    margin-bottom: 5px;
+}
+
+.menu-links a:hover {
+    font-weight: 700;
+}
+
+.menu-links a:hover::after {
+    display: inline-block;
+}
+
